# GranMapache

./: .gitignore  README.md  README.md~  Standalone_Example.py  ToDo.txt  pyproject.toml  setup.cfg  setup.py
examples/: TEXT.txt
examples/Stable_Extensions/: TEXT.txt
examples/Stable_Extensions/Molecular_Graphs/: Scatter_Plots.py
examples/Stable_Extensions/Random_Graphs/1_Generation/: Generation.py
examples/Stable_Extensions/Random_Graphs/2_Extensions/: Extensions.py
examples/Stable_Extensions/Random_Graphs/3_Plotting/: Plotting.py  Times_Random_Graphs_100_nodes.pkl  Times_Random_Graphs_125_nodes.pkl  Times_Random_Graphs_150_nodes.pkl  Times_Random_Graphs_175_nodes.pkl  Times_Random_Graphs_200_nodes.pkl
gmapache/: __init__.py  __main__.py  common_subgraphs_WORKING.pyx  common_subgraphs_python.py  integerization.c  integerization.html  integerization.py  integerization.pyx  integerization_python.py  integerization_python.py~  isomorphisms.pyx  isomorphisms_FINISHED.pyx  isomorphisms_WORKING.pyx  partial_maps.pyx  partial_maps_python.py  reduce.sh  subgraph_isomorphisms.pyx  subgraph_isomorphisms_WORKING.pyx  verbosity.pyx
gmapache/common_subgraphs/: __init__.py
gmapache/integerization/: __init__.py
gmapache/verbosity/: __init__.py
standalone/: Standalone_Example.py
