################################################################################
#                                                                              #
# - GranMapache: GRAphs-and-Networks MAPping Applications with                 #
#                Cython and HEuristics                                         #
#                                                                              #
# - Description: suite for the analysis of bijections, morphisms, alignments   #
#                and other maps between graphs.                                #
#                                                                              #
# - project.toml for gmapache package including cython and other dependencies  #
#                                                                              #
################################################################################

################################################################################
[build-system]
requires = [
    "setuptools>=75.1.0",
    "wheel>=0.44.0",
    "Cython>=3.0.11",
    "numpy>=2.1.2",
    "networkx>=3.4.1",
    "matplotlib>=3.9.2"
]
build-backend = "setuptools.build_meta"

################################################################################
[project]
name = "gmapache"
version = "1.0"
dependencies = [
    "setuptools>=75.1.0",
    "wheel>=0.44.0",
    "Cython>=3.0.11",
    "numpy>=2.1.2",
    "networkx>=3.4.1",
    "matplotlib>=3.9.2"
]
requires-python = ">=3.11.10"
authors = [
    {name = "Marcos E. Gonzalez Laffitte", email = "marcoslaffitte@gmail.com"}
]
# maintainers = [
#   {name = "Author Name", email = "author_email@example.com"}
# ]
description = "GranMapache (GRAphs-and-Networks MAPping Applications with Cython and HEuristics), or gmapache for short, is a suite for the analysis of bijections, morphisms, alignments and other maps between graphs."
license = {file = "LICENSE"}
keywords = [
    "graph isomorphism",
    "graph transformation",
    "atom-to-atom maps",
    "maximum common subgraph",
    "progressive multiple graph alignment"
]

################################################################################
[project.urls]
Repository = "https://github.com/MarcosLaffitte/GranMapache.git"
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

################################################################################
[options]
packages =
    myprimes
    myprimes.mysubmodule
include_package_data = True


################################################################################
################################################################################
