[metadata]
name = GranMapache
version = 1.0
author = Marcos E. Gonzalez Laffitte
author_email = marcoslaffitte@gmail.com
description = Suite for the analysis of bijections, morphisms, alignments and other maps between graphs
keywords = graph isomorphism, graph transformation, atom to atom maps, maximum common subgraph, progressive multiple graph alignment


[options]
packages =
    gmapache
include_package_data = True
python_requires = >=3.6
install_requires =
    networkx>=3.3
    matplotlib>=3.9.1
    cython>=3.0.10
    numpy>=1.24.3