[metadata]
name = gmapache
version = 1.0
author = Marcos E. Gonzalez Laffitte
author_email = marcoslaffitte@gmail.com
description = Suite for the analysis of bijections, morphisms, alignments and other maps between graphs
keywords = graph isomorphism, graph transformation, atom to atom maps, maximum common subgraph, progressive multiple graph alignment


[options]
packages =
    gmapache
include_package_data = True
python_requires = >=3.10
install_requires =
    cython>=3.0.11
    networkx>=3.4.1
    matplotlib>=3.9.2
