[metadata]
name = gmapache
version = 1.0
author = Marcos E. Gonzalez Laffitte
author_email = marcoslaffitte@gmail.com
description = Suite for the analysis of bijections, morphisms, alignments and other maps between graphs
keywords = graph isomorphism, graph transformation, atom to atom maps, maximum common subgraph, progressive multiple graph alignment


[options]
packages =
    gmapache
include_package_data = True
python_requires = >=3.11.10
install_requires =
    setuptools>=75.1.0
    wheel>=0.44.0
    Cython>=3.0.11
    numpy>=2.1.2
    networkx>=3.4.1
    matplotlib>=3.9.2